# bigtech-ai-stakes

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE-DATA  README.md  pyproject.toml  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: data-correction.md  feature-request.md
.github/workflows/: ci.yml
data/: README.md  backtest_results.csv  backtest_results_10d.csv  backtest_results_60d.csv  ownership_summary.md  stakes_extracted.csv
data/events/: events.csv
data/stakes/: stakes.csv
docs/: backtest_findings.md  citations.md  disclosure-rubric.md  methodology.md
scripts/: run_live_extraction.py
src/bigtech_ai_stakes/: __init__.py  cli.py  data.py
src/bigtech_ai_stakes/backtest/: __init__.py  core.py  prices.py
src/bigtech_ai_stakes/dashboard/: __init__.py  data.py
src/bigtech_ai_stakes/disclosure/: __init__.py  core.py  rubric.py
src/bigtech_ai_stakes/events/: __init__.py
src/bigtech_ai_stakes/eventstudy/: __init__.py  core.py  factors.py
src/bigtech_ai_stakes/filings/: __init__.py  edgar_adapter.py  footnote_extractor.py
src/bigtech_ai_stakes/inference/: __init__.py  ownership.py
src/bigtech_ai_stakes/lookthrough/: __init__.py  core.py
tests/: test_backtest.py  test_dashboard.py  test_disclosure.py  test_edgar_adapter.py  test_events_data.py  test_eventstudy.py  test_footnote_extractor.py  test_lookthrough.py  test_ownership.py  test_smoke.py  test_stakes_data.py
tests/fixtures/: ff3_sample.csv  footnote_amzn_q1_2026.txt  footnote_googl_q3_2024.txt  footnote_msft_q3_fy26.txt
