[project]
name = "bigtech-ai-stakes"
version = "0.1.0"
description = "Quarterly panel and analytics for U.S. public-company equity stakes in Anthropic and OpenAI."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Yicheng Yang", email = "yy85@illinois.edu" },
]
keywords = [
    "finance",
    "sec-edgar",
    "anthropic",
    "openai",
    "fair-value",
    "asc-321",
    "look-through-earnings",
    "event-study",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "edgartools>=3.14",
    "yfinance>=1.3",
    "fredapi>=0.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "statsmodels>=0.14",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs>=2.2",
]
analysis = [
    "matplotlib>=3.9",
    "plotly>=5.22",
    "scikit-learn>=1.5",
    "jupyter>=1.0",
]
dashboard = [
    "streamlit>=1.36",
]

[project.scripts]
bigtech-ai-stakes = "bigtech_ai_stakes.cli:app"

[project.urls]
Homepage = "https://github.com/YichengYang-Ethan/bigtech-ai-stakes"
Issues = "https://github.com/YichengYang-Ethan/bigtech-ai-stakes/issues"
Repository = "https://github.com/YichengYang-Ethan/bigtech-ai-stakes"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bigtech_ai_stakes"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "N",    # pep8-naming
    "RUF",  # ruff-specific
    "C4",   # comprehensions
    "PIE",  # misc lints
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # allow non-snake_case test fixture names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["edgar.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config -m 'not live'"
markers = [
    "live: tests that require live SEC EDGAR network access (run with `pytest -m live`)",
]

[tool.coverage.run]
source = ["src/bigtech_ai_stakes"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
